<?xml version="1.0"?>
<package format="3">
  <name>gazebo_continuous_track_ros2_gazebo11</name>
  <version>0.0.4</version>
  <description>The gazebo_continuous_track_ros2_gazebo11 package ported to ROS 2.</description>
  <maintainer email="okada@rm.is.tohoku.ac.jp">Yoshito Okada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>gazebo_dev</depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
